--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /*  Reset    */
+        /*  Reset pagina   */
         * {padding: 0;
             margin: 0;}
 
-            a {text-decoration: none;}
+            a {text-decoration: none;
+            color: black;}
 
         /*  Codigo pagina    */
 
