--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
             a {text-decoration: none;
             color: black;}
-
+            
+            ul {list-style: none;
+            margin-right: 0;}
         /*  Codigo pagina    */
 
         header,nav,main,footer {width: 80%;
@@ -20,7 +22,7 @@
         header{min-height: 8rem;
             background-color: pink;}
         nav{width: 80%;
-            min-height: 4rem;
+            min-height: 7rem;
             background-color: orange;}
         main{width: 80%;
             min-height: 20rem;
@@ -36,12 +38,41 @@
         .ponerBorde{border: 0.3rem solid black;}
 
         main div {width: 30%;
-            min-height: 5rem;
-            background-color: lightgray;
-            border: 0.2rem solid red;}
+                min-height: 5rem;
+                background-color: lightgray;
+                border: 0.2rem solid red;}
 
         .izda{background-color: rgba(101, 187, 187, 0.555);}
         .dcha{background-color: rgba(106, 202, 9, 0.521);}
+
+        main div a {font-size: 1.2rem;
+                    color: rgb(182, 70, 70);
+                    font-weight: 600;
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;}
+        
+        ul {border: 0.1rem solid blue;
+            min-height: 7rem;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;}
+
+        ul li{width: 8rem;
+            height: 3.5rem;
+            /*border: 0.1rem solid green;   */
+            margin: 0.5rem;}
+
+        ul li a {font-size: 2rem;
+                color: rgb(190, 170, 209);
+                display: block;
+                text-align: center;
+                padding-top: 0.5rem;
+                background-color: rgb(72, 107, 63);
+                border-radius: 0.4rem;}
+
+        ul li a:hover { background-color: rgb(190, 170, 209);
+                        color: rgb(72, 107, 63);
+                        transition: 500ms;}
+
     </style>
 </head>
 <body>
@@ -50,10 +81,17 @@
 
     </header>
     <nav class="ponerBorde">
-
+        <ul>
+            <li class="menu"><a href="">enlace1</a></li>
+            <li class="menu"><a href="">enlace2</a></li>
+            <li class="menu"><a href="">enlace3</a></li>
+            <li class="menu"><a href="">enlace4</a></li>
+            <li class="menu"><a href="">enlace5</a></li>
+        </ul>
     </nav>
     <main id="principal">
-        <div class="izda"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus excepturi harum ratione fugiat itaque mollitia nisi sapiente consequuntur quasi dolore voluptate iusto animi, officiis accusamus quaerat quam molestias reiciendis praesentium?
+        <div class="izda"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <a href="#" target="_blank">Voluptatibus</a> excepturi harum ratione fugiat itaque mollitia nisi sapiente consequuntur quasi dolore voluptate iusto animi, officiis accusamus quaerat quam molestias reiciendis praesentium?
 
         </div>
         <div class="dcha">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quia asperiores maxime ipsam, sit aliquam eveniet voluptate voluptatum dolores rerum. Voluptate officia molestias quaerat animi veritatis blanditiis corporis deserunt incidunt.
