--- a/index.html
+++ b/index.html
@@ -4,74 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        /*  Reset pagina   */
-        * {padding: 0;
-            margin: 0;}
-
-            a {text-decoration: none;
-            color: black;}
-            
-            ul {list-style: none;
-            margin-right: 0;}
-        /*  Codigo pagina    */
-
-        header,nav,main,footer {width: 80%;
-            margin: 0 auto;}
-
-        header{min-height: 8rem;
-            background-color: pink;}
-        nav{width: 80%;
-            min-height: 7rem;
-            background-color: orange;}
-        main{width: 80%;
-            min-height: 20rem;
-            background-color: lightblue;
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;}
-
-        footer{width: 80%;
-            min-height: 7rem;
-            background-color: chartreuse;}
-
-        .ponerBorde{border: 0.3rem solid black;}
-
-        main div {width: 30%;
-                min-height: 5rem;
-                background-color: lightgray;
-                border: 0.2rem solid red;}
-
-        .izda{background-color: rgba(101, 187, 187, 0.555);}
-        .dcha{background-color: rgba(106, 202, 9, 0.521);}
-
-        main div a {font-size: 1.2rem;
-                    color: rgb(182, 70, 70);
-                    font-weight: 600;
-                    font-family: Verdana, Geneva, Tahoma, sans-serif;}
-        
-        ul {border: 0.1rem solid blue;
-            min-height: 7rem;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;}
-
-        ul li{width: 8rem;
-            height: 3.5rem;
-            /*border: 0.1rem solid green;   */
-            margin: 0.5rem;}
-
-        ul li a {font-size: 2rem;
-                color: rgb(190, 170, 209);
-                display: block;
-                text-align: center;
-                padding-top: 0.5rem;
-                background-color: rgb(72, 107, 63);
-                border-radius: 0.4rem;}
-
-        ul li a:hover { background-color: rgb(190, 170, 209);
-                        color: rgb(72, 107, 63);
-                        transition: 500ms;}
 
     </style>
 </head>
