flex main axis e inversion alineacion

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 <body>
     
-    <header>
-
-    </header>
     <nav class="ponerBorde">
         <ul>
             <li class="menu"><a href="">enlace1</a></li>
@@ -23,6 +20,15 @@
             <li class="menu"><a href="">enlace5</a></li>
         </ul>
     </nav>
+
+    <header>
+        <h1>Viajes Bizkaia</h1>
+        <h2>Visita nuestro territorio y disfruta de los lugares mas bellos</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Necessitatibus 
+            totam animi vitae omnis sit repudiandae exercitationem, fugiat dignissimos minus unde!</p>
+            
+    </header>
+
     <main id="principal">
         <div class="izda"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             <a href="#" target="_blank">Voluptatibus</a> excepturi harum ratione fugiat itaque mollitia nisi sapiente consequuntur quasi dolore voluptate iusto animi, officiis accusamus quaerat quam molestias reiciendis praesentium?
