--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
     </nav>
 
     <header>
-        <h1>Viajes Bizkaia</h1>
-        <h2>Visita nuestro territorio y disfruta de los lugares mas bellos</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Necessitatibus 
-            totam animi vitae omnis sit repudiandae exercitationem, fugiat dignissimos minus unde!</p>
+        <div class="logo">
+
+        </div>
+        <div class="titulo">
+            <h1>Viajes Bizkaia</h1>
+            <h2>Visita nuestro territorio y disfruta de los lugares mas bellos</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Necessitatibus 
+                totam animi vitae omnis sit repudiandae exercitationem, fugiat dignissimos minus unde!</p>
+        </div>
+
             
     </header>
 
