--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
 
-        
+
 
     </style>
 </head>
@@ -38,6 +38,19 @@
     </header>
 
     <main id="principal">
+        <img src="img/bizkaia_1.jpg" alt="bizkaia_1" title="bizkaia_1">
+        <img src="img/bizkaia_2.jpg" alt="bizkaia_2" title="bizkaia_2">
+        <img src="img/bizkaia_3.jpg" alt="bizkaia_3" title="bizkaia_3">
+        <img src="img/bizkaia_4.jpg" alt="bizkaia_4" title="bizkaia_4">
+        <img src="img/bizkaia_5.jpg" alt="bizkaia_5" title="bizkaia_5">
+        <img src="img/bizkaia_6.jpeg" alt="bizkaia_6" title="bizkaia_6">
+        <img src="img/bizkaia_7.jpg" alt="bizkaia_7" title="bizkaia_7">
+        <img src="img/bizkaia_1.jpg" alt="bizkaia_1" title="bizkaia_1">
+
+
+
+
+        <!-- Divs de la primera configuracion del main
         <div class="izda"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             <a href="#" target="_blank">Voluptatibus</a> excepturi harum ratione fugiat itaque mollitia nisi sapiente consequuntur quasi dolore voluptate iusto animi, officiis accusamus quaerat quam molestias reiciendis praesentium?
 
@@ -51,6 +64,7 @@
         <div class="2izda">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quia asperiores maxime ipsam, sit aliquam eveniet voluptate voluptatum dolores rerum. Voluptate officia molestias quaerat animi veritatis blanditiis corporis deserunt incidunt.
 
         </div>
+    -->
 
     </main>
     <footer class="ponerBorde">
